--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,13 +1,22 @@
 .card {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   width: 300px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   margin: 10px;
+  min-width: 265px;
 }
+
+@media (max-width: 1100px) {
+  .card {
+    
+  }
+}
+
 
 .card-image {
   position: relative;
