--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,3 +1,17 @@
 .Male-section {
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+
+.profile-section {
+    display: flex;
+    justify-content: center;
+}
+
+.card-section {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
