--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -105,12 +105,13 @@
 /* The Close Button */
 .close {
   position: absolute;
-  top: 15px;
+  top: 100px;
   right: 35px;
   color: #f1f1f1;
   font-size: 40px;
   font-weight: bold;
   transition: 0.3s;
+  z-index: 1000;
 }
 
 .close:hover,
